chore: Update Dependencies
Update Dependencies for Feb 2026

Signed-off-by: Rahul Gupta <CxRes@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
   "unpkg": "dist/browser.min.js",
   "types": "src/index.d.ts",
   "dependencies": {
-    "@sec-ant/readable-stream": "^0.4.1",
+    "@sec-ant/readable-stream": "^0.6.0",
     "content-type": "^1.0.5",
     "streamsearch-web": "^1.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/compat": "^1.1.0",
-    "@eslint/js": "^9.6.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
-    "cspell": "^8.9.1",
-    "dedent": "^1.5.3",
-    "esbuild": "0.21.5",
-    "eslint": "^9.5.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-markdown": "^5.0.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-regexp": "^2.6.0",
-    "eslint-plugin-vitest": "^0.5.4",
-    "globals": "^15.4.0",
-    "headright": "^0.1.1",
-    "husky": "^9.0.11",
-    "knip": "^5.23.2",
-    "lint-staged": "^15.2.7",
+    "@commitlint/cli": "^20.4.2",
+    "@commitlint/config-conventional": "^20.4.2",
+    "@eslint/compat": "^2.0.2",
+    "@eslint/js": "^10.0.1",
+    "@eslint/markdown": "^7.5.1",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/eslint-plugin": "^1.6.9",
+    "@vitest/ui": "^4.0.18",
+    "cspell": "^9.6.4",
+    "dedent": "^1.7.1",
+    "esbuild": "0.27.3",
+    "eslint": "^10.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-regexp": "^3.0.0",
+    "globals": "^17.3.0",
+    "headright": "^0.3.0",
+    "husky": "^9.1.7",
+    "knip": "^5.85.0",
+    "lint-staged": "^16.2.7",
     "parse-gitignore": "^2.0.0",
-    "prettier": "^3.3.1",
-    "vitest": "^1.6.0"
+    "prettier": "^3.8.1",
+    "vitest": "^4.0.18"
   },
   "engines": {
     "node": ">20.6"
